unpackaged/main/default/objects/Document_Checklist_Item__c/Document_Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>This custom object will have the information regarding the Document Checklist Items for IDB Invest Implemenatation.</description>
    <label>Document Checklist Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklist Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>