unpackaged/main/default/objects/Document_Checklist_Item__c/fields/ATI_Exception__c.field-meta.xml
<CustomField>
    <fullName>ATI_Exception__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ATI Exception</label>
    <length>50</length>
    <type>Text</type>
</CustomField>