unpackaged/main/default/objects/Document_Checklist_Item__c/fields/EzShare_Document_Permalink__c.field-meta.xml
<CustomField>
    <fullName>EzShare_Document_Permalink__c</fullName>
    <description>This field is used for EzShare Documents</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EzShare Document Permalink</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>