unpackaged/main/default/objects/Document_Checklist_Item__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>