unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_ApprovalSubmitter__c.field-meta.xml
<CustomField>
    <fullName>IDB_ApprovalSubmitter__c</fullName>
    <description>This field is used in Submitting the approval</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ApprovalSubmitter</label>
    <type>Email</type>
</CustomField>