unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_ApprovalSubmitter_LastName__c.field-meta.xml
<CustomField>
    <fullName>IDB_ApprovalSubmitter_LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Submitter Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>