unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Approver__c.field-meta.xml
<CustomField>
    <fullName>IDB_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to set the default approver when the Approver field is empty</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>