unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Document_Identifier_Ext__c.field-meta.xml
<CustomField>
    <fullName>IDB_Document_Identifier_Ext__c</fullName>
    <description>This field is used for EzShare Documents</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Identifier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>