unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_EzShare_creation_date_Ext__c.field-meta.xml
<CustomField>
    <fullName>IDB_EzShare_creation_date_Ext__c</fullName>
    <description>This field is used for EzShare Documents</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EzShare creation date</label>
    <type>DateTime</type>
</CustomField>