unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_IDD_Form_Funds_Internal__c.field-meta.xml
<CustomField>
    <fullName>IDB_IDD_Form_Funds_Internal__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity__r.Account.Id)),HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))+$Label.InternalURLIdPrefix+ Opportunity__r.Account.Id + $Label.InternalURLIdPostfixIDDFunds , "Integrity Due Diligence Fund Form" ,"_blank "),'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integrity Due Diligence for Funds</label>
    <type>Text</type>
</CustomField>