unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Next_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>IDB_Next_Reminder_Date__c</fullName>
    <description>Field to set the next reminder date in order to send Approval notifications to approvers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Reminder Date</label>
    <type>DateTime</type>
</CustomField>