unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Next_Reminder_to_PC_Date__c.field-meta.xml
<CustomField>
    <fullName>IDB_Next_Reminder_to_PC_Date__c</fullName>
    <description>field used to set the next reminder date for primary contacts to review Documents with status equals Published or Rejected</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>shows the next reminder date to primary contacts which has Documents with status equals Published or Rejected</inlineHelpText>
    <label>Next Reminder to Primary Contact Date</label>
    <type>DateTime</type>
</CustomField>