unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>IDB_OpportunityName__c</fullName>
    <description>shows the name of the opportunity it belongs to</description>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>shows the name of the opportunity it belongs to</inlineHelpText>
    <label>OpportunityName</label>
    <type>Text</type>
</CustomField>