unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>IDB_Report_Link__c</fullName>
    <formula>IF( NOT( ISBLANK( Opportunity__r.AccountId ) ) ,
 IF(RecordType.DeveloperName == 'IDB_Integrity_Due_Diligence',HYPERLINK( $Label.ReportUrlPrefix + $Label.IDD_Forms_Report_Id + $Label.ReportUrlPost &amp; Opportunity__r.AccountId , "Integrity Due Diligence Report"), 
 IF(RecordType.DeveloperName == 'IDB_Integrity_Due_Diligence_for_Funds',
HYPERLINK( $Label.ReportUrlPrefix +$Label.IDD_Funds_Report_Id+ $Label.ReportUrlPost &amp;  Opportunity__r.AccountId  , "Integrity Due Diligence Fund Report") ,"")
 ) 
, "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Link</label>
    <type>Text</type>
</CustomField>