unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>IDB_Submitted_Date__c</fullName>
    <description>Field to set the submitted date of a DCI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>