unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Survey__c.field-meta.xml
<CustomField>
    <fullName>IDB_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>