unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>IDB_Team_Role__c</fullName>
    <label>Team Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Investment Officer</fullName>
            </value>
            <value>
                <fullName>Financial Analyst / Alternate Investment Officer</fullName>
            </value>
            <value>
                <fullName>Financial Products and Services Officer</fullName>
            </value>
            <value>
                <fullName>Credit Risk Officer</fullName>
            </value>
            <value>
                <fullName>Environmental and Social Officer</fullName>
            </value>
            <value>
                <fullName>Transaction Attorney</fullName>
            </value>
            <value>
                <fullName>Development Effectiveness Officer</fullName>
            </value>
            <value>
                <fullName>Corporate Governance Officer</fullName>
            </value>
            <value>
                <fullName>Institutional Integrity Officer</fullName>
            </value>
            <value>
                <fullName>Resource Mobilization Officer</fullName>
            </value>
            <value>
                <fullName>Portfolio Management Officer</fullName>
            </value>
            <value>
                <fullName>Advisory Services Officer</fullName>
            </value>
            <value>
                <fullName>Special Assets Officer</fullName>
            </value>
            <value>
                <fullName>Alternate Portfolio Management Officer</fullName>
            </value>
            <value>
                <fullName>Loan Services Officer</fullName>
            </value>
            <value>
                <fullName>Alternate Special Assets Officer</fullName>
            </value>
            <value>
                <fullName>Portfolio Administration Officer</fullName>
            </value>
            <value>
                <fullName>Blended Finance Officer</fullName>
            </value>
            <value>
                <fullName>Loan Services Officer Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>