unpackaged/main/default/objects/Document_Checklist_Item__c/fields/IDB_Transaction_Id_of_Maestro__c.field-meta.xml
<CustomField>
    <fullName>IDB_Transaction_Id_of_Maestro__c</fullName>
    <description>Shows the Transaction Id of Maestro on the Opportunity related to it</description>
    <formula>Opportunity__r.Transaction_Number_Ext_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Transaction Id of Maestro on the Opportunity related to it</inlineHelpText>
    <label>Transaction Id of Maestro</label>
    <type>Text</type>
</CustomField>