unpackaged/main/default/objects/Document_Checklist_Item__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>