unpackaged/main/default/objects/Document_Checklist_Item__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instructions</label>
    <type>TextArea</type>
</CustomField>