unpackaged/main/default/objects/Document_Checklist_Item__c/fields/List_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>