unpackaged/main/default/objects/Document_Checklist_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>