unpackaged/main/default/objects/Document_Checklist_Item__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please, follow the structure's instructions:

Period &gt; Structure

Annual &gt; YYYY
Semester &gt; YYYY [1/2] H
Trimester	&gt; YYYY [1/2/3/4] Q
Monthly &gt; YYYY MM
Date &gt; YYYY MM DD
Date Range &gt;	[YYYY] – [YYYY] (Or specific dates range [YYYY MM DD])
No Date &gt; No Date</inlineHelpText>
    <label>Period</label>
    <length>23</length>
    <type>Text</type>
</CustomField>