unpackaged/main/default/objects/Document_Checklist_Item__c/fields/Record_Access_Classification_IIC__c.field-meta.xml
<CustomField>
    <fullName>Record_Access_Classification_IIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Access Classification IIC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>