unpackaged/main/default/objects/Document_Checklist_Item__c/recordTypes/IDB_Documents.recordType-meta.xml
<RecordType>
    <fullName>IDB_Documents</fullName>
    <active>true</active>
    <description>Select to request Documents</description>
    <label>Documents</label>
</RecordType>