unpackaged/main/default/objects/Document_Checklist_Item__c/recordTypes/IDB_Hyperlink.recordType-meta.xml
<RecordType>
    <fullName>IDB_Hyperlink</fullName>
    <active>true</active>
    <description>Select to request details for Questionnaire Forms (DVF, SEG, Legal, etc.) or CG Portal. Add a link to static forms or CG Portal</description>
    <label>Hyperlink</label>
</RecordType>