unpackaged/main/default/objects/Document_Checklist_Item__c/recordTypes/IDB_Integrity_Due_Diligence_for_Funds.recordType-meta.xml
<RecordType>
    <fullName>IDB_Integrity_Due_Diligence_for_Funds</fullName>
    <active>true</active>
    <description>Select to request details for IDD Funds</description>
    <label>Integrity Due Diligence for Funds</label>
</RecordType>