unpackaged/main/default/objects/Document_Checklist_Item__c/recordTypes/IDB_Survey.recordType-meta.xml
<RecordType>
    <fullName>IDB_Survey</fullName>
    <active>true</active>
    <description>Select to request details for Surveys</description>
    <label>Survey</label>
</RecordType>