unpackaged/main/default/objects/Document_Checklist_Item__c/validationRules/IDB_Name_Characters_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>IDB_Name_Characters_restriction</fullName>
    <active>true</active>
    <description>VR to restrict some kind of characters on Name field</description>
    <errorConditionFormula>OR(
CONTAINS(Name, '~') ,
CONTAINS(Name, '!') ,
CONTAINS(Name, '@') ,
CONTAINS(Name, '#') ,
CONTAINS(Name, '$') ,
CONTAINS(Name, '%') ,
CONTAINS(Name, '^') ,
CONTAINS(Name, '&amp;') ,
CONTAINS(Name, '*') ,
CONTAINS(Name, '(') ,
CONTAINS(Name, ')') ,
CONTAINS(Name, '`') ,
CONTAINS(Name, ';') ,
CONTAINS(Name, '&lt;') ,
CONTAINS(Name, '&gt;') ,
CONTAINS(Name, ':') ,
CONTAINS(Name, '?') ,
CONTAINS(Name, ',') ,
CONTAINS(Name, '[') ,
CONTAINS(Name, ']') ,
CONTAINS(Name, '{') ,
CONTAINS(Name, '}') ,
CONTAINS(Name, '"') ,
CONTAINS(Name, '/') ,
CONTAINS(Name, '\\') ,
CONTAINS(Name, '|') ,
CONTAINS(Name, '.'),
CONTAINS(Name, "'")
)</errorConditionFormula>
    <errorMessage>Invalid format name. Name Can't be with any of these symbols ~ ! @ # $ % ^ &amp; * ( ) ` ; &lt; &gt; :  ? , [ ] { } ' " / \ | .</errorMessage>
</ValidationRule>