unpackaged/main/default/objects/Document_Checklist_Item__c/validationRules/Period_Mandatory_for_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_Mandatory_for_Approval</fullName>
    <active>true</active>
    <description>Period Mandatory for Approval</description>
    <errorConditionFormula>AND( ISCHANGED(Status__c),Period__c = '', ISPICKVAL(Status__c, 'Approved'))</errorConditionFormula>
    <errorDisplayField>Period__c</errorDisplayField>
    <errorMessage>Please, indicate the Period following the structure's instructions indicated on the field help.</errorMessage>
</ValidationRule>