unpackaged/main/default/objects/Document_Checklist_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>IDB_Subsection__c</columns>
    <columns>Status__c</columns>
    <columns>IDB_Approver__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>