unpackaged/main/default/objects/Document_Checklist_Item__c/listViews/Document_Checklist_Item_By_Section.listView-meta.xml
<ListView>
    <fullName>Document_Checklist_Item_By_Section</fullName>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>New</value>
    </filters>
    <label>Document Checklist Item By Section</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>