unpackaged/main/default/objects/Document_Checklist_Item__c/listViews/IDB_DCIs_Published_And_Rejected.listView-meta.xml
<ListView>
    <fullName>IDB_DCIs_Published_And_Rejected</fullName>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>IDB_Subsection__c</columns>
    <columns>Status__c</columns>
    <columns>IDB_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published,Rejected</value>
    </filters>
    <label>DCIs Published And Rejected</label>
</ListView>